--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "event-router",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple javascript event router",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --harmony",
+    "documentation": "cp preface.md README.md && mocha -R markdown --harmony >> README.md"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/thurt/event-router#readme",
   "dependencies": {
     "copy-object-graph": "git+https://git@github.com/thurt/copy-object-graph.git"
+  },
+  "devDependencies": {
+    "mocha": "^2.4.5"
   }
 }
