--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "copy-object-graph": "git+https://git@github.com/thurt/copy-object-graph.git#v1.0.1"
   },
   "devDependencies": {
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.6"
   }
 }
