--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "event-router",
   "version": "1.1.3",
   "description": "A simple javascript event router",
-  "main": "EventRouter.js",
+  "main": "build/EventRouter.js",
   "scripts": {
     "test": "mocha --harmony",
     "documentation": "cp preface.md README.md && mocha -R markdown --harmony >> README.md",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2"
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "transpile": "babel ./src --out-dir=./build",
+    "build": "npm run flow && npm run transpile && npm run test && npm run documentation"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,8 @@
     "copy-object-graph": "git+https://git@github.com/thurt/copy-object-graph.git#v1.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "flow-bin": "^0.37.4",
     "mocha": "^2.4.5",
     "sinon": "^1.17.6"
