--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple javascript event router",
   "main": "build/EventRouter.js",
   "scripts": {
-    "test": "mocha --harmony",
-    "documentation": "cp preface.md README.md && mocha -R markdown --harmony >> README.md",
+    "test": "mocha --compilers js:babel-register",
+    "documentation": "cp preface.md README.md && mocha -R markdown --compilers js:babel-register >> README.md",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "transpile": "babel ./src --out-dir=./build",
     "build": "npm run flow && npm run transpile && npm run test && npm run documentation"
@@ -25,9 +25,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
+    "babel-register": "^6.18.0",
     "flow-bin": "^0.37.4",
-    "mocha": "^2.4.5",
+    "mocha": "^3.2.0",
     "sinon": "^1.17.6"
   }
 }
