--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "event-router",
   "version": "1.1.3",
   "description": "A simple javascript event router",
-  "main": "build/EventRouter.js",
+  "main": "EventRouter.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register",
-    "documentation": "cp preface.md README.md && mocha -R markdown --compilers js:babel-register >> README.md",
+    "test": "mocha --harmony --compilers js:babel-register",
+    "documentation": "cp preface.md README.md && mocha -R markdown --harmony --compilers js:babel-register >> README.md",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
-    "transpile": "babel ./src --out-dir=./build",
+    "transpile": "babel ./EventRouter.js.flow -o ./EventRouter.js",
     "build": "npm run flow && npm run transpile && npm run test && npm run documentation"
   },
   "repository": {
