--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "EventRouter.js",
   "scripts": {
     "test": "mocha --harmony --compilers js:babel-register",
-    "documentation": "cp preface.md README.md && mocha -R markdown --harmony --compilers js:babel-register >> README.md",
+    "documentation": "cp preface.md README.md && documentation build --document-exported EventRouter.js.flow -f md >> README.md",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "transpile": "babel ./EventRouter.js.flow -o ./EventRouter.js",
     "build": "npm run flow && npm run transpile && npm run test && npm run documentation"
@@ -28,6 +28,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-register": "^6.18.0",
+    "documentation": "^4.0.0-beta.18",
     "flow-bin": "^0.37.4",
     "mocha": "^3.2.0",
     "sinon": "^1.17.6"
